[metadata]
name = auditree-tekton-example
version = attr: auditree-tekton-example.__version__
description = Demo running auditree in tekton
url = https://github.com/auditree/auditree-tekton-example
license = Apache Software License v2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description = Tests to run as part of verifying compliance standing

[options]
packages = find:
install_requires =
    auditree-arboretum>=0.6.0

[bdist_wheel]
universal = 1
